appId: com.detourist.app
---
- launchApp
- assertVisible: "Plan a Trip"
- tapOn: "Plan a Trip"
- assertVisible: "Where do you want to go?"
